# oxideav-avif

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml
examples/: diag_decode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: libavif_encode_oxideav_decode.rs  libavif_encode_oxideav_libavif_decode_match.rs  libavif_oxideav_reencode_roundtrip.rs
fuzz/src/: lib.rs
src/: alpha.rs  av1_stub.rs  avis.rs  box_parser.rs  cicp.rs  decoder.rs  derived.rs  encoder.rs  error.rs  grid.rs  image.rs  inspect.rs  lib.rs  meta.rs  mux.rs  parser.rs  region.rs  sample_group.rs  transform.rs
tests/: fuzz_regressions.rs  integration.rs
tests/fixtures/: black420.avif  gray32.avif  midgray.avif  red.avif  white16.avif
tests/fixtures/fuzz/: y_plane_divergence_match.avif  y_plane_roundtrip_avif1.avif  y_plane_roundtrip_avif2.avif
