[package]
name = "oxideav-avif"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-avif"
authors = ["Mark Karpeles"]
description = "Pure-Rust AVIF (AV1 Image File Format) decoder — HEIF meta-box walk + primary-item / av1C extraction, handed to oxideav-av1 for end-to-end pixel decode; grid + alpha + irot/imir/clap composition"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-avif"
keywords = ["multimedia", "image", "avif", "av1", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"
oxideav-av1 = "0.1"
