[package]
name = "oxideav-avif"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-avif"
authors = ["Mark Karpeles"]
description = "Pure-Rust AVIF (AV1 Image File Format) decoder — HEIF meta-box walk + primary-item / av1C extraction, handed to oxideav-av1 for end-to-end pixel decode; grid + alpha + irot/imir/clap composition"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-avif"
keywords = ["multimedia", "image", "avif", "av1", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# Both framework deps are gated behind the default-on `registry`
# feature. With the feature off the crate exposes the standalone
# container parser + composition layer (operating on crate-local
# `AvifFrame` / `AvifPixelFormat` / `AvifError`) and never references
# either crate. See `src/lib.rs` for the standalone-vs-registry split.
oxideav-core = { version = "0.1", optional = true }
oxideav-av1 = { version = "0.1", optional = true }

[features]
default = ["registry"]
# Pulls in `oxideav-core` + `oxideav-av1` and exposes the
# `oxideav_core::Decoder` trait surface (`AvifDecoder`,
# `make_decoder`, `register`, `register_with_av1`, `make_encoder`).
# Disable for an `oxideav-core`-free build; the standalone container
# parser + grid/alpha/transform composition layer (operating on
# `crate::image::AvifFrame`) plus `inspect` / `parse` /
# `parse_header` / `parse_avis` are still exposed.
registry = ["dep:oxideav-core", "dep:oxideav-av1"]

# Diagnostic example needs the AV1 decoder + registry decoder trait —
# only build it when the `registry` feature is on so
# `cargo build --no-default-features` still walks every target.
[[example]]
name = "diag_decode"
required-features = ["registry"]
