[package]
name = "oxideav-avif-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"
# libloading is the only libavif interop: the cross-decode harness
# `dlopen`s the system-installed libavif at startup. No `*-sys` crate,
# no libavif source pulled into the dep tree. Harnesses skip silently
# when libavif isn't installed (see fuzz/src/lib.rs).
libloading = "0.8"

[dependencies.oxideav-avif]
path = ".."

[lib]
name = "oxideav_avif_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

# Cross-decode harnesses. The oxideav-avif encoder is a stub
# (lib.rs::make_encoder returns Error::Unsupported because we lack an
# AV1 encoder), so the literal "oxideav encode" and self-roundtrip
# directions of #304 round 2 can't be wired up. The two libavif-driven
# round-2 harnesses below test the strongest properties the existing
# decoder surface supports — pixel cross-validation against libavif's
# decoder on the same input bitstream, and round-trip stability across
# a libavif re-encode.

# Round 1 (#345) — encode with libavif, decode with oxideav-avif,
# tolerate decoder errors but assert dimensions on success.
[[bin]]
name = "libavif_encode_oxideav_decode"
path = "fuzz_targets/libavif_encode_oxideav_decode.rs"
test = false
doc = false

# Round 2 #304 (b) — encode with libavif lossless YUV444+IDENTITY,
# decode with BOTH oxideav-avif and libavif, assert pixel match.
# Skipped silently when libavif isn't installed.
[[bin]]
name = "libavif_encode_oxideav_libavif_decode_match"
path = "fuzz_targets/libavif_encode_oxideav_libavif_decode_match.rs"
test = false
doc = false

# Round 2 #304 (a) — closest realisable approximation of the literal
# self-roundtrip task: oxideav decode → libavif re-encode → oxideav
# decode → assert the two oxideav-decoded planes match. The literal
# "oxideav-encode → oxideav-decode" path is blocked on the missing AV1
# encoder; this harness validates oxideav-avif's decoder is bit-stable
# under a re-encode by libavif.
[[bin]]
name = "libavif_oxideav_reencode_roundtrip"
path = "fuzz_targets/libavif_oxideav_reencode_roundtrip.rs"
test = false
doc = false
